added some basic sctructure for main screen plus gave some css style, need to work on that more tho

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
     
 </head>
 <body>
+    <div class="header">
+        <h1 class="title">Welcome to Family Feud!</h1>
+    </div>
+    <div id="games">
+        <p><a href="./otazka1.html" > game number one!</a></p>
+
+
+    </div>
     
 </body>
 </html>
