changing the style a bitL

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <h1 class="title">Welcome to Family Feud!</h1>
     </div>
     <div id="games">
-        <p><a href="./otazka1.html" > game number one!</a></p>
+        <h3><a class="game-link", href="./otazka1.html" > Game number one!</a></h3>
+
+
 
 
     </div>
