pretty much finished html and css, time to shine Samo

--- a/otazka1.html
+++ b/otazka1.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style_otazky.css">
+  <meta charset="UTF-8">
+  <title>Family Feud Board</title>
+  <link rel="stylesheet" href="style_otazky.css">
+
 </head>
 <body>
-    
+  <div class="board">
+    <div class="row">
+      <div class="flip-card"><div class="flip-inner"><button class="box front">1</button><div class="box back"></div></div></div>
+      <div class="flip-card"><div class="flip-inner"><button class="box front">5</button><div class="box back"></div></div></div>
+    </div>
+    <div class="row">
+      <div class="flip-card"><div class="flip-inner"><button class="box front">2</button><div class="box back"></div></div></div>
+      <div class="flip-card"><div class="flip-inner"><button class="box front">6</button><div class="box back"></div></div></div>
+    </div>
+    <div class="row">
+      <div class="flip-card"><div class="flip-inner"><button class="box front">3</button><div class="box back"></div></div></div>
+      <div class="flip-card"><div class="flip-inner"><button class="box front">7</button><div class="box back"></div></div></div>
+    </div>
+    <div class="row">
+      <div class="flip-card"><div class="flip-inner"><button class="box front">4</button><div class="box back"></div></div></div>
+      <div class="flip-card"><div class="flip-inner"><button class="box front">8</button><div class="box back"></div></div></div>
+    </div>
+  </div>
+  <div class = "X">
+    <button class="XX">X</button>
+  </div>
+  <script src="./script.js"></script>
 </body>
 </html>
