added back button

--- a/otazka1.html
+++ b/otazka1.html
@@ -28,6 +28,9 @@
   <div class = "X">
     <button class="XX">X</button>
   </div>
+    <div class="X">
+        <button class="XX"><a href="index.html">Gou bek!!</a></button>
+    </div>
   <script src="./script.js"></script>
 </body>
 </html>
