Setupovanie scoring systemu, zfunkcnovanie mien timov, trackovanie skore timov pomocou localStorage

--- a/index.html
+++ b/index.html
@@ -1,24 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Uzasny sebkov a samkov Family Feud!!</title>
-    <link rel="stylesheet" href="style.css">
-
-    
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div class="header">
-        <h1 class="title">Welcome to Family Feud!</h1>
+      <h1 class="title">Welcome to Family Feud!</h1>
     </div>
     <div id="games">
-        <h3><a class="game-link", href="./otazka1.html" > Game number one!</a></h3>
-
-
-
-
+      <h3>
+        <a class="game-link" , href="./otazka1.html"> Game number one!</a>
+      </h3>
     </div>
-    
-</body>
+  </body>
+  <script src="scriptIndex.js"></script>
 </html>
