--- a/otazka1.html
+++ b/otazka1.html
@@ -1,36 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Family Feud Board</title>
-  <link rel="stylesheet" href="style_otazky.css">
-
-</head>
-<body>
-  <div class="board">
-    <div class="row">
-      <div class="flip-card"><div class="flip-inner"><button class="box front">1</button><div class="box back"></div></div></div>
-      <div class="flip-card"><div class="flip-inner"><button class="box front">5</button><div class="box back"></div></div></div>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Family Feud Board</title>
+    <link rel="stylesheet" href="style_otazky.css" />
+  </head>
+  <body>
+    <div class="board">
+      <div class="row">
+        <div class="flip-card">
+          <div class="flip-inner">
+            <button class="box front" id="1">1</button>
+            <div class="box back"></div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-inner">
+            <button class="box front" id="5">5</button>
+            <div class="box back"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="flip-card">
+          <div class="flip-inner">
+            <button class="box front" id="2">2</button>
+            <div class="box back"></div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-inner">
+            <button class="box front" id="6">6</button>
+            <div class="box back"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="flip-card">
+          <div class="flip-inner">
+            <button class="box front" id="3">3</button>
+            <div class="box back"></div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-inner">
+            <button class="box front" id="7">7</button>
+            <div class="box back"></div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="flip-card">
+          <div class="flip-inner">
+            <button class="box front" id="4">4</button>
+            <div class="box back"></div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-inner">
+            <button class="box front" id="8">8</button>
+            <div class="box back"></div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="row">
-      <div class="flip-card"><div class="flip-inner"><button class="box front">2</button><div class="box back"></div></div></div>
-      <div class="flip-card"><div class="flip-inner"><button class="box front">6</button><div class="box back"></div></div></div>
-    </div>
-    <div class="row">
-      <div class="flip-card"><div class="flip-inner"><button class="box front">3</button><div class="box back"></div></div></div>
-      <div class="flip-card"><div class="flip-inner"><button class="box front">7</button><div class="box back"></div></div></div>
-    </div>
-    <div class="row">
-      <div class="flip-card"><div class="flip-inner"><button class="box front">4</button><div class="box back"></div></div></div>
-      <div class="flip-card"><div class="flip-inner"><button class="box front">8</button><div class="box back"></div></div></div>
-    </div>
-  </div>
-  <div class = "X">
-    <button class="XX">X</button>
-  </div>
     <div class="X">
-        <button class="XX"><a href="index.html">Gou bek!!</a></button>
+      <button class="XX">X</button>
     </div>
-  <script src="./script.js"></script>
-</body>
+    <div class="X">
+      <button class="XX" id="back"><a href="index.html">Gou bek!!</a></button>
+    </div>
+    <script src="./script.js"></script>
+  </body>
 </html>
