pridal som button na naspat do menu a pridal mu style

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <a class="game-link" , href="./otazka1.html"> Game number one!</a>
       </h3>
     </div>
+    <button class="naspat"><a href="loading.html">Chceme zmeniť tímy!!</a></button>
   </body>
   <script src="scriptIndex.js"></script>
 </html>
