added boxes, buttons, function to transfering points just need to hook it up on th equestions, right now its on the box itself with listener

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
       </h3>
     </div>
     <button class="naspat"><a href="loading.html">Chceme zmeniť tímy!!</a></button>
+    <body>
+      <div class="scoreboard left">Team A: 0</div>
+      <div class="scoreboard right">Team B: 0</div>
+    </body>
   </body>
   <script src="scriptIndex.js"></script>
 </html>
