uprava gramatiky ahaha

--- a/loading.html
+++ b/loading.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="loadingS.css" />
   </head>
   <body>
-    <h1>Nazvy timov?</h1>
+    <h1>Názvy tímov?</h1>
     <h2>Tím 1</h2>
     <input id="teamOne" type="text" placeholder="Napr degeškovci" />
     <h2>Tím 2</h2>
     <input id="teamTwo" type="text" placeholder="Napr rontogéni" />
-    <button id="ready"><a href="index.html">Sme pripraveni!!</a></button>
+    <button id="ready"><a href="index.html">Sme pripravení!!</a></button>
   </body>
   <script>
     //NAZVY TIMOV NA LOADING SCREEN -- ulozenie do local storage
