--- a/otazka1.html
+++ b/otazka1.html
@@ -99,7 +99,7 @@
           tempPoints = 0;
           updatePointBox();
         });
-      
+      //tu je ten optional co mozes vymazat alebo nechame tak//
         pointBox.addEventListener("click", () => {
           tempPoints += 1;
           updatePointBox();
