--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
       </h3>
       <!-- ak chces otazky dalsie davaj ich tu prosim ta, nie dalsi div iba h3, <a>  a atd-->
     </div>
-    <button class="naspat"><a href="loading.html">Chceme zmeniť tímy!!</a></button>
-
+    <div class="button-wrapper">
+      <button class="naspat">
+        <a href="loading.html">Chceme zmeniť tímy!!</a>
+      </button>
+    </div>
       <div class="scoreboard left">Team A: 0</div>
       <div class="scoreboard right">Team B: 0</div>
       <script>
@@ -25,7 +28,7 @@
           const header = document.querySelector('.header');
           const games = document.getElementById('games');
           const headerHeight = header.offsetHeight;
-          games.style.paddingTop = `${headerHeight - 40}px`; // +30 for spacing
+          games.style.paddingTop = `${headerHeight - 40}px`; // nemam sajnu najmensiu preco to musim davat minus ale kym to funguje id...
         });
       </script>
   </body>
