Pridanie odpovedi na rozne otazky, POZOR treba este doriesit layout stranok pri otazkach, kde je menej ako 8 odpovedi

--- a/otazka1.html
+++ b/otazka1.html
@@ -75,8 +75,8 @@
     <div class="X">
       <button class="XX" id="back"><a href="index.html">Gou bek!!</a></button>
     </div>
-    <div id="team-a" class="scoreboard left">A error</div>
-    <div id="team-b" class="scoreboard right">B error</div>
+    <div id="team-a" class="scoreboard left">DAJ SEM MENO TIMU A CHUJO</div>
+    <div id="team-b" class="scoreboard right">TU B CHUJO</div>
     <audio id="ahoj" src="sounds/question.mp3"></audio>
     <script src="./script.js"></script>
   </body>
