--- a/index.html
+++ b/index.html
@@ -16,15 +16,51 @@
           Game number one!</a
         >
       </h3>
-      <h3><a class="game-link" id="game2">Game number two!</a></h3>
-      <h3><a class="game-link" id="game3">Game number three!</a></h3>
-      <h3><a class="game-link" id="game4">Game number four!</a></h3>
-      <h3><a class="game-link" id="game5">Game number five!</a></h3>
-      <h3><a class="game-link" id="game6">Game number six!</a></h3>
-      <h3><a class="game-link" id="game7">Game number seven!</a></h3>
-      <h3><a class="game-link" id="game8">Game number eight!</a></h3>
-      <h3><a class="game-link" id="game9">Game number nine!</a></h3>
-      <h3><a class="game-link" id="game10">Game number ten!</a></h3>
+      <h3>
+        <a class="game-link" id="game2" , href="./otazka1.html"
+          >Game number two!</a
+        >
+      </h3>
+      <h3>
+        <a class="game-link" id="game3" , href="./otazka1.html"
+          >Game number three!</a
+        >
+      </h3>
+      <h3>
+        <a class="game-link" id="game4" , href="./otazka1.html"
+          >Game number four!</a
+        >
+      </h3>
+      <h3>
+        <a class="game-link" id="game5" , href="./otazka1.html"
+          >Game number five!</a
+        >
+      </h3>
+      <h3>
+        <a class="game-link" id="game6" , href="./otazka1.html"
+          >Game number six!</a
+        >
+      </h3>
+      <h3>
+        <a class="game-link" id="game7" , href="./otazka1.html"
+          >Game number seven!</a
+        >
+      </h3>
+      <h3>
+        <a class="game-link" id="game8" , href="./otazka1.html"
+          >Game number eight!</a
+        >
+      </h3>
+      <h3>
+        <a class="game-link" id="game9" , href="./otazka1.html"
+          >Game number nine!</a
+        >
+      </h3>
+      <h3>
+        <a class="game-link" id="game10" , href="./otazka1.html"
+          >Game number ten!</a
+        >
+      </h3>
       <!-- ak chces otazky dalsie davaj ich tu prosim ta, nie dalsi div iba h3, <a>  a atd-->
     </div>
     <div class="button-wrapper">
