--- a/otazka1.html
+++ b/otazka1.html
@@ -66,7 +66,7 @@
       <div id="point-box" class="point-box">Points: 0</div>
       <button id="btn-right" class="point-btn">+</button>
     </div>
-    <div><h3 id="xtext"></h3></div>
+    <div><h2 id="xtext"></h2></div>
     <div class="X">
       <button class="XX" id="wrong">X</button>
     </div>
@@ -75,7 +75,7 @@
     </div>
     <div id="team-a" class="scoreboard left">DAJ SEM MENO TIMU A CHUJO</div>
     <div id="team-b" class="scoreboard right">TU B CHUJO</div>
-    <audio id="ahoj" src="sounds/question.mp3"></audio>
+    <audio id="ahoj" src="sounds/question.mp3" autoplay></audio>
     <script src="./script.js"></script>
   </body>
 </html>
